# rover

./: .gitignore  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  crun.sh  esp32_receiver.ino  esp32_receiver_simple.ino.bak  ethernet_only_setup.sh  hardware_check.py  info.md  launch.bat  launch.sh  launch.sh.bak  pc_rc_sender.py  pi_rover_system.py  pi_web_video_stream.py  pyproject.toml  requirements.txt  run.md  run.sh  test_udp.py
docs/: README.md
docs/archive/: FIX_RC_NOT_SHOWING.md  QUICKSTART.md  RC_LINK_DEBUG_PLAN.md  SYSTEM_OVERVIEW.md  work.md
tools/: README.md
tools/archive/: connect_pi.sh  diagnose_rc_link.py  diagnose_rc_network.sh  diagnose_ssh.py  diagnostic_uart.py  esp32code.txt  manual_diagnose.sh  pi_uart_bridge.py
verification/: test_camera_parsing.py  verify_dashboard.py  verify_modern_ui.py
