[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rover"
version = "1.0.0"
description = "Underwater Rover Control System – Raspberry Pi + ESP32 + Flysky RC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
    "pyserial>=3.5",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
pc-rc-sender = "pc_rc_sender:main"
hardware-check = "hardware_check:main"
